# CProgrammingModernApproach2nd

./: .gitignore  CMakeLists.txt  MathUtil.c
ch11/excersize/: ch11_swap.c
ch11/programs/: ch11_maxmin.c  ch11_ptr_plus.c
ch12/programs/: ch12_find_largest.c  ch12_reverse3.c
ch13/programs/: ch13_countspaces.c  ch13_readline.c  ch13_strcat_1.c  ch13_strcat_2.c
ch2/projects/: proj_1.c  proj_2.c  proj_3.c  proj_7.c
ch3/programs/: addfrac.c  tprintf.c  unexpected_scanf.c
ch6/programs/: ch6_sum.c  square.c
ch7/programs/: ch7_length.c
ch8/programs/: ch8_reverse.c
ch9/programs/: ch9_quicksort.c
